--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Implement functions</title>
     <script src="isPrime.js"></script>
+    <script src="factorial.js"></script>
 </head>
 <body>
 
