--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Implement functions</title>
-    <script src="isPrime.js"></script>
-    <script src="factorial.js"></script>
+    <script src="./dist/bundle.js"></script>
 </head>
 <body>
 
